<resources>
    <string name="app_name">Omelee</string>
    <string name="title_job_detail">Job Detail</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_user_mode">User Mode</string>
    <string name="pref_summary_user_mode">I am a Service Provider</string>
    <string name="pref_title_user_mode">Service Provider</string>

    <string name="pref_user_details">User Details</string>
    <string name="pref_user_name">Name</string>
    <string name="pref_user_name_summary">Enter Name</string>
    <string name="pref_user_phone">Phone</string>
    <string name="pref_user_phone_summary">Enter Phone Number</string>
    <string name="pref_user_pincode">Pincode</string>
    <string name="pref_user_pincode_summary">Enter Pincode</string>

    <string name="customer_phone_number">Enter phone number</string>
    <string name="customer_name">Customer Name</string>
    <string name="username">Name please</string>
    <string name="pincode">Pincode</string>
    <string name="job_description">Job description</string>
    <string name="cancel_job_button">Cancel Job </string>
    <string name="assign_job_button">Assign</string>
    <string name="post_new_job">Post New Job</string>
    <string name="job_id">Job Id</string>
    <string name="job_type">Job Type</string>
    <string name="job_status">Job Status</string>
    <string name="day_segment">Day Segment</string>
    <string name="service_provider_name">Service provider</string>
    <string name="service_provider_phone">Service provider phone</string>
    <string name="date_initiated">Start Date</string>
    <string name="customer_preferred_date">Customer Preferred Date</string>
    <string name="date_completed">Done Date</string>
    <string name="date_started">Date Started</string>
    <string name="user_name">Service User</string>
    <string name="user_phone">User Phone</string>
    <string name="schedule_job_message">Schedule</string>
    <string name="no_connectivity">Please check your internet connectivity</string>
    <string name="unreachable_server">We are not able to reach our server. Please try later</string>

    <string name="post_job_select_date">.</string>

    <string name="post_invoice_button">Bill</string>
    <string name="material_charges">Material Charges    Rs:</string>
    <string name="labour_charges">Labour Charges      Rs:</string>
    <string name="coupon_code">Coupon Code           :</string>
    <string name="total_charges">Total Charges       Rs:</string>
    <string name="discounted_material_charges">Discounted Material Charges    Rs:</string>
    <string name="discounted_labour_charges">Discounted Labour Charges      Rs:</string>
    <string name="discounted_total_charges">Discounted Total Charges       Rs:</string>

    <string name="confirm_invoice_action">Please confirm before proceeding</string>
    <string name="reject_invoice_amount">Cancel</string>
    <string name="accept_invoice_amount">Accept</string>
    <string name="ok_button">Ok</string>

    <string name="jobtypes_prompt">Choose a Job type</string>
    <string-array name="job_types">
        <item>Plumbing</item>
        <item>Electrical</item>
    </string-array>

    <string name="day_segment_prompt">Choose a time</string>



    <string-array name="day_segments">
        <item>9-11 AM</item>
        <item>11-1 PM</item>
        <item>1-3 PM</item>
        <item>3-5 PM</item>
    </string-array>

    <string-array name="day_segments_morning_done">
        <item>11-1 PM</item>
        <item>1-3 PM</item>
        <item>3-5 PM</item>
    </string-array>

    <string-array name="day_segments_forenoon_done">
        <item>1-3 PM</item>
        <item>3-5 PM</item>
    </string-array>

    <string-array name="day_segments_afternoon_done">
        <item>3-5 PM</item>
    </string-array>

    <string-array name="day_segments_evening_done">
        <item>Select next day</item>
    </string-array>


    <!-- Background color and style -->
    <color name="white">#FFFFFF</color>
    <color name="teal">#008080</color>
    <color name="grey">#686868</color>
    <color name="red">#FF0000</color>
    <color name="cream">#FFFFCC</color>
    <color name="blue">#3B5998</color>
    <!--<color name="yellow">#A16F0E</color>-->
    <color name="yellow">#FFF176</color>
    <color name="black">#000000</color>
    <color name="beige">#FFFFBF</color>


</resources>
