<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_jobType"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:gravity="top|start"
        android:layout_gravity="top|start"
        android:scaleType="centerInside"/>
    <!--android:layout_centerVertical="true"-->

    <ImageView
        android:id="@+id/img_jobStatus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/img_jobType"
        android:layout_centerVertical="true"
        android:gravity="top|end"
        android:scaleType="centerInside"
        android:layout_gravity="top|right" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:layout_gravity="top|center"
        android:clickable="false">

        <TextView
            android:id="@+id/jobId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:gravity="top|left"
            android:layout_gravity="top|left"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/job_id" />
        <!--android:layout_below="@+id/img_jobType"-->

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:gravity="center|left"
            android:layout_gravity="center|left"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/user_name" />

        <!-- android:layout_below="@+id/jobId"-->

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom|left"
            android:layout_gravity="bottom|left"
            android:text="@string/user_phone" />

        <!--android:layout_below="@+id/job_type"-->
    </LinearLayout>
</FrameLayout>